feat(agent): close ordinary-user sync execution loop
Implement the user-facing Agent Assistant control plane from LangGraph planning through Java tool execution and real data-sync worker completion. Add secure datasource and sync adapters, bounded terminal polling, deterministic audit reference mapping, metadata-derived primary keys, retry-safe fan-out lifecycle, low-sensitive runner diagnostics, and ordinary-user result-detail permissions. Validate with Keycloak gateway E2E from MySQL to PostgreSQL.